# necromaai

./: README.md  data.js  evaluate-model.js  index.js  model.js  package-lock.json  package.json  pyproject.toml
data/: README.md  ithuba.json  ithuba.txt  neo.output.json  output.cached.json  output.json
necromaai/: __init__.py
