[tool.poetry]
name = "necromaai"
version = "1.0.0"
description = "A predictive model that takes an array of elements, each containing 6 numbers, and predicts the next item in the array, it use various machine learning algorithms, i.e, recurrent neural network (RNN) with the Long Short-Term Memory (LSTM) architecture."
authors = ["makhosi6 <ndondo330@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

